# studying-haskell

./: README.md  studying-haskell.cabal
.stack-work/install/e580970b/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  hspec-2.4.4-Hslmpj3KhpX5qiq42ca2Yq  hspec-core-2.4.4-HfxBR0YrMu77yIMWFmbbw5  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  studying-haskell-0.1.0.0-8dLEzeTkcFO86AW1rTntdy
.stack-work/install/e580970b/lib/x86_64-windows-ghc-8.0.2/studying-haskell-0.1.0.0-8dLEzeTkcFO86AW1rTntdy/: Lib.hi
.stack-work/install/e580970b/pkgdb/: package.cache  studying-haskell-0.1.0.0-8dLEzeTkcFO86AW1rTntdy.conf
src/Wiki_99_Questions/: Problem1.hs  Problem2.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs
test/Wiki_99_Questions/: Problem1Spec.hs  Problem2Spec.hs  Problem3Spec.hs  Problem4Spec.hs  Problem5Spec.hs  Problem6Spec.hs  Problem7Spec.hs  Problem8Spec.hs
