name:                studying-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/studying-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              7vk1
maintainer:          7uk10gata@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wiki_99_Questions.Problem1
                     , Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable studying-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , studying-haskell
  default-language:    Haskell2010

test-suite studying-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , studying-haskell
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/studying-haskell
